html structure for all files in pages directory

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <section>
  <a href="./pages/hawaii.html">
     <img src="./assets/images/hawaii.jpg" alt="an image of a beach in Hawaii">
-    <p> Hawaii</p>
+    <p>Hawaii</p>
  </a>   
 </section>
 
@@ -64,6 +64,8 @@
    </section>
 
     </main>
+
+    <!-- footer component -->
     <footer>
         <section>
         <h3>Contact</h3>
