link all html pages in nav bar to each other

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     
     <!-- nav component -->
     <nav>
-        <h2>Travel Site</h2>
+        <h2><a href="index.html">Travel Site</a></h2>
         <ul>
-            <li>Home</li>
-            <li>Hawaii</li>
-            <li>Iceland</li>
-            <li>Greece</li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="./pages/hawaii.html">Hawaii</a></li>
+            <li><a href="./pages/iceland.html">Iceland</a></li>
+            <li><a href="./pages/greece.html">Greece</a></li>
         </ul>
     </nav>
 
