--- a/pages/iceland.html
+++ b/pages/iceland.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="stylesheet" href="./css/global.css">
-<link rel="stylesheet" href="./css/destinations.css">
+<link rel="stylesheet" href="../css/global.css">
+<link rel="stylesheet" href="../css/destinations.css">
 
     <title>Travel Site</title>
 </head>
@@ -15,12 +15,12 @@
     
     <!-- nav component -->
     <nav>
-        <h2>Travel Site</h2>
+        <h2><a href="../index.html">Travel Site</a></h2>
         <ul>
-            <li>Home</li>
-            <li>Hawaii</li>
-            <li>Iceland</li>
-            <li>Greece</li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="hawaii.html">Hawaii</a></li>
+            <li><a href="iceland.html">Iceland</a></li>
+            <li><a href="greece.html">Greece</a></li>
         </ul>
     </nav>
 
