add styling to nav bar on each .html page

--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
     <title>Travel Site</title>
 </head>
 <body class="container">
-    
+    <header>
     <!-- nav component -->
-    <nav>
-        <h2><a href="index.html">Travel Site</a></h2>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="./pages/hawaii.html">Hawaii</a></li>
-            <li><a href="./pages/iceland.html">Iceland</a></li>
-            <li><a href="./pages/greece.html">Greece</a></li>
+    <nav class="header__nav">
+        <h2><a href="index.html" class="nav__logo">Travel Site</a></h2>
+        <ul class="nav__menu">
+            <li class="menu__elements"><a href="index.html" class="menu__elements--a-decoration menu__elements--active">Home</a></li>
+            <li class="menu__elements"><a href="./pages/hawaii.html" class="menu__elements--a-decoration">Hawaii</a></li>
+            <li class="menu__elements"><a href="./pages/iceland.html" class="menu__elements--a-decoration">Iceland</a></li>
+            <li class="menu__elements"><a href="./pages/greece.html" class="menu__elements--a-decoration">Greece</a></li>
         </ul>
     </nav>
-
+</header>
     
-    <main>
+    <main class="main__content">
 <!-- hero component -->
 <article>
 <h1>Travelling Comes With Endless Discoveries</h1>
