--- a/pages/iceland.html
+++ b/pages/iceland.html
@@ -14,7 +14,7 @@
 <body class="container">
     
     <!-- nav component -->
-    <nav>
+    <!-- <nav>
         <h2><a href="../index.html">Travel Site</a></h2>
         <ul>
             <li><a href="../index.html">Home</a></li>
@@ -22,7 +22,20 @@
             <li><a href="iceland.html">Iceland</a></li>
             <li><a href="greece.html">Greece</a></li>
         </ul>
-    </nav>
+    </nav> -->
+
+    <header>
+        <!-- nav component -->
+        <nav class="header__nav">
+            <h2><a href="../index.html" class="nav__logo">Travel Site</a></h2>
+            <ul class="nav__menu">
+                <li class="menu__elements"><a href="../index.html" class="menu__elements--a-decoration">Home</a></li>
+                <li class="menu__elements"><a href="hawaii.html" class="menu__elements--a-decoration">Hawaii</a></li>
+                <li class="menu__elements"><a href="iceland.html" class="menu__elements--a-decoration menu__elements--active">Iceland</a></li>
+                <li class="menu__elements"><a href="greece.html" class="menu__elements--a-decoration">Greece</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <!-- itinerary component -->
     <main>
