hero section complete

--- a/pages/hawaii.html
+++ b/pages/hawaii.html
@@ -31,7 +31,7 @@
                 <li class="menu__elements"><a href="../index.html" class="menu__elements--a-decoration">Home</a></li>
                 <li class="menu__elements"><a href="hawaii.html" class="menu__elements--a-decoration menu__elements--active">Hawaii</a></li>
                 <li class="menu__elements"><a href="iceland.html" class="menu__elements--a-decoration">Iceland</a></li>
-                <li class="menu__elements"><a href="greece.html" class="menu__elements--a-decoration">Greece</a></li>
+                <li class="menu__elements"><a href="greece.html" class="menu__elements--a-decoration menu__element-last">Greece</a></li>
             </ul>
         </nav>
     </header>
