--- a/index.html
+++ b/index.html
@@ -15,28 +15,38 @@
     <!-- nav component -->
     <nav class="header__nav">
         <h2><a href="index.html" class="nav__logo">Travel Site</a></h2>
+
         <ul class="nav__menu">
             <li class="menu__elements"><a href="index.html" class="menu__elements--a-decoration menu__elements--active">Home</a></li>
             <li class="menu__elements"><a href="./pages/hawaii.html" class="menu__elements--a-decoration">Hawaii</a></li>
             <li class="menu__elements"><a href="./pages/iceland.html" class="menu__elements--a-decoration">Iceland</a></li>
-            <li class="menu__elements"><a href="./pages/greece.html" class="menu__elements--a-decoration">Greece</a></li>
+            <li class="menu__elements menu__element-last"><a href="./pages/greece.html" class="menu__elements--a-decoration">Greece</a></li>
         </ul>
     </nav>
 </header>
     
-    <main class="main__content">
+<main class="main__content">
 <!-- hero component -->
-<article>
-<h1>Travelling Comes With Endless Discoveries</h1>
-
-<p>Don't let your dreams be just dreams. Experience the world by booking a vacation with us now.</p>
-
-<!-- button component -->
-<a href="#">Get started</a>
-
-<!-- insert hero image here as background-image -->
+<div class="hero--bg-color">
+<article class="hero">
+  
+<section class="hero__header">
     
+    <h1 class="hero__heading--text">Travelling Comes With Endless Discoveries</h1>
+
+    <p class="hero__slogan">Don't let your dreams be just dreams. Experience the world by booking a vacation with us now.</p>
+
+    <!-- button component -->
+    <a href="#" class="hero__button">Get started</a>
+</section>
+<!-- insert hero image here as background-image -->
+<div class="hero__bg-img">
+
+</div>
+
 </article>
+</div>
+
 
 <!-- recommendations component -->
 <h3>Recommendations</h3>
