include recommendations component

--- a/index.html
+++ b/index.html
@@ -49,29 +49,35 @@
 
 
 <!-- recommendations component -->
-<h3>Recommendations</h3>
+<h3 class="recommendation__heading">Recommendations</h3>
 
+<section class="card__wrapper">
 <!-- hawaii -->
-<section>
- <a href="./pages/hawaii.html">
-    <img src="./assets/images/hawaii.jpg" alt="an image of a beach in Hawaii">
-    <p>Hawaii</p>
+
+<section class="card__block" >
+ <a href="./pages/hawaii.html" class="card__anchor">
+    <img src="./assets/images/hawaii.jpg" alt="an image of a beach in Hawaii" class="card__img card">
+    <p class="card__text">Hawaii</p>
  </a>   
 </section>
 
-<section>
-    <a href="./pages/iceland.html">
-       <img src="./assets/images/iceland.jpg" alt="an image of a river in a forest in Iceland">
-       <p>Iceland</p>
+<!-- iceland -->
+<section class="card__block" >
+    <a href="./pages/iceland.html" class="card__anchor">
+       <img src="./assets/images/iceland.jpg" alt="an image of a river in a forest in Iceland" class="card__img card">
+       <p class="card__text">Iceland</p>
     </a>   
    </section>
 
-   <section>
-    <a href="./pages/greece.html">
-       <img src="./assets/images/greece.jpg" alt="an image of a monument in Greece">
-       <p>Greece</p>
+<!-- greece -->
+   <section class="card__block" >
+    <a href="./pages/greece.html" class="card__anchor">
+       <img src="./assets/images/greece.jpg" alt="an image of a monument in Greece" class="card__img card">
+       <p class="card__text">Greece</p>
     </a>   
    </section>
+
+</section>
 
     </main>
 
