--- a/pages/iceland.html
+++ b/pages/iceland.html
@@ -32,49 +32,62 @@
                 <li class="menu__elements"><a href="../index.html" class="menu__elements--a-decoration">Home</a></li>
                 <li class="menu__elements"><a href="hawaii.html" class="menu__elements--a-decoration">Hawaii</a></li>
                 <li class="menu__elements"><a href="iceland.html" class="menu__elements--a-decoration menu__elements--active">Iceland</a></li>
-                <li class="menu__elements"><a href="greece.html" class="menu__elements--a-decoration">Greece</a></li>
+                <li class="menu__elements menu__element-last"><a href="greece.html" class="menu__elements--a-decoration">Greece</a></li>
             </ul>
         </nav>
     </header>
 
     <!-- itinerary component -->
-    <main>
-<h1>Iceland</h1>
+    <main class="main__content">
 
-<!-- <div>insert iceland pic as bg img</div> -->
-<h2>Friday</h2>
 
-<ul>
+        <section class="destination--bg-iceland">
+
+<h1 class="destination__heading">Iceland</h1>
+<div class="card__wrapper">
+<!-- <div>insert hawaii pic as bg img</div> -->
+
+
+<section class="card__block card card--size card--itinerary">
+<h3 class="itinerary__heading">Friday</h3>
+
+<ul class="card__itinerary-schedule">
     <li>Breakfast</li>
     <li>Lunch</li>
     <li>Dinner</li>
     <li>Hiking</li>
 </ul>
+</section>
 
-<h2>Saturday</h2>
+<section class="card__block card card--size card--itinerary">
+<h3 class="itinerary__heading">Saturday</h3>
 
-<ul>
+<ul class="card__itinerary-schedule">
     <li>Breakfast</li>
     <li>Lunch</li>
     <li>Dinner</li>
     <li>Hiking</li>
 </ul>
+</section>
 
-<h2>Sunday</h2>
+<section class="card__block card card--size card--itinerary">
+<h3 class="itinerary__heading">Sunday</h3>
 
-<ul>
+<ul class="card__itinerary-schedule">
     <li>Breakfast</li>
     <li>Lunch</li>
     <li>Dinner</li>
     <li>Hiking</li>
 </ul>
+</section>
 
-
+</div>
+</section>
 
     </main>
 
     <!-- footer component -->
-    <footer>
+    <!-- <footer>
         <section>
         <h3>Contact</h3>
         <p>Email</p>
@@ -101,6 +114,109 @@
 </section>
 
 
+    </footer> -->
+
+    <footer class="footer footer--position">
+        <section class="footer__contact-container">
+        <h3 class="footer__title">Contact</h3>
+        <div class="footer__email-container">
+        <p class="footer__subtitle">Email</p>
+        <p class="footer__email">info@travelsite.com</p>
+    </div>
+    </section>
+
+    <section class="footer__hours-container">
+        <h3 class="footer__title">Hours</h3>
+        <ul class="footer__hours">
+            <li><p class="footer__subtitle">Monday - Friday</p>
+                <p class="footer__hours--text">9:00 AM - 5:00 PM</p></li>
+        <li class="footer__hours-grouping"><p class="footer__subtitle">Saturday</p>
+            <p class="footer__hours--text">10:00 AM - 4:00 PM</p></li>
+        <li class="footer__hours-grouping"> <p class="footer__subtitle">Sunday</p>
+            <p class="footer__hours--text">Closed</p></li>
+    </ul>
+        
+    </section>
+
+    
+    <section class="footer__social-container">
+    <h3 class="footer__title">Social</h3>
+
+    <div class="footer__icons-container">
+    <a href="https://www.instagram.com" rel="external" target="_blank"><img src="../assets/images/icon-instagram.png" class="footer__icon-instagram"></a>
+    <a href="https://www.facebook.com" rel="external" target="_blank"><img src="../assets/images/icon-facebook.png" class="footer__icon-fb"></a>
+    <a href="https://www.twitter.com" rel="external" target="_blank"><img src="../assets/images/icon-twitter.png" class="footer__icon-twitter"></a>
+</div>
+</section>
+
+
     </footer>
+
+
+    <!-- itinerary component -->
+    <!-- <main>
+<h1>Iceland</h1> -->
+
+<!-- <div>insert iceland pic as bg img</div> -->
+<!-- <h2>Friday</h2>
+
+<ul>
+    <li>Breakfast</li>
+    <li>Lunch</li>
+    <li>Dinner</li>
+    <li>Hiking</li>
+</ul>
+
+<h2>Saturday</h2>
+
+<ul>
+    <li>Breakfast</li>
+    <li>Lunch</li>
+    <li>Dinner</li>
+    <li>Hiking</li>
+</ul>
+
+<h2>Sunday</h2>
+
+<ul>
+    <li>Breakfast</li>
+    <li>Lunch</li>
+    <li>Dinner</li>
+    <li>Hiking</li>
+</ul> -->
+
+
+
+    <!-- </main> -->
+
+    <!-- footer component -->
+    <!-- <footer>
+        <section>
+        <h3>Contact</h3>
+        <p>Email</p>
+        <p>info@travelsite.com</p>
+    </section>
+
+    <section>
+        <h3>Hours</h3>
+        <p>Monday - Friday</p>
+        <p>9:00 AM - 5:00 PM</p>
+
+        <p>Saturday</p>
+        <p>10:00 AM - 4:00 PM</p>
+
+        <p>Sunday</p>
+        <p>Closed</p>
+    </section>
+
+    <h3>Social</h3>
+    <section>
+    <a href="https://www.instagram.com" rel="external" target="_blank"><img src="../assets/images/icon-instagram.png"></a>
+    <a href="https://www.facebook.com" rel="external" target="_blank"><img src="../assets/images/icon-facebook.png"></a>
+    <a href="https://www.twitter.com" rel="external" target="_blank"><img src="../assets/images/icon-twitter.png"></a>
+</section>
+
+
+    </footer> -->
 </body>
 </html>
