add diving deeper features

--- a/pages/hawaii.html
+++ b/pages/hawaii.html
@@ -30,7 +30,7 @@
     </header>
 
     <!-- itinerary component -->
-    <main class="main__content">
+    <main class="main__content-destinations">
 
         <section class="destination--bg-hawaii">
 
