--- a/pages/iceland.html
+++ b/pages/iceland.html
@@ -33,7 +33,7 @@
     </header>
 
     <!-- itinerary component -->
-    <main class="main__content">
+    <main class="main__content-destinations">
 
 
         <section class="destination--bg-iceland">
@@ -123,7 +123,7 @@
                         src="../assets/images/icon-twitter.png" class="footer__icon-twitter"></a>
             </div>
         </section>
-        
+
     </footer>
 </body>
 
