--- a/pages/greece.html
+++ b/pages/greece.html
@@ -29,7 +29,7 @@
     </header>
 
     <!-- itinerary component -->
-    <main class="main__content">
+    <main class="main__content-destinations">
 
         <section class="destination--bg-greece">
 
