--- a/index.html
+++ b/index.html
@@ -15,84 +15,84 @@
 <body class="container">
     <header>
         <!-- nav component -->
-        <nav class="header__nav">
+        <nav class="main-nav">
             <h2><a href="index.html" class="nav__logo">Travel Site</a></h2>
 
             <ul class="nav__menu">
-                <li class="menu__elements"><a href="index.html"
-                        class="menu__elements--a-decoration menu__elements--active">Home</a></li>
-                <li class="menu__elements"><a href="./pages/hawaii.html" class="menu__elements--a-decoration">Hawaii</a>
+                <li class="menu__item"><a href="index.html"
+                        class="menu__item-link menu__item--active">Home</a></li>
+                <li class="menu__item"><a href="./pages/hawaii.html" class="menu__item-link">Hawaii</a>
                 </li>
-                <li class="menu__elements"><a href="./pages/iceland.html"
-                        class="menu__elements--a-decoration">Iceland</a></li>
-                <li class="menu__elements menu__element-last"><a href="./pages/greece.html"
-                        class="menu__elements--a-decoration">Greece</a></li>
+                <li class="menu__item"><a href="./pages/iceland.html"
+                        class="menu__item-link">Iceland</a></li>
+                <li class="menu__item menu__last-item"><a href="./pages/greece.html"
+                        class="menu__item-link">Greece</a></li>
             </ul>
         </nav>
     </header>
 
-    <main class="main__content">
-        <!-- hero component -->
-        <div class="hero--bg-color">
-            <article class="hero">
+    <main>
+        <!-- hero -->
+        <div class="hero-bg-color">
+            <div class="hero">
 
-                <section class="hero__header">
+                <section class="hero-text">
 
-                    <h1 class="hero__heading--text">Travelling Comes With Endless Discoveries</h1>
+                    <h1 class="hero-heading">Travelling Comes With Endless Discoveries</h1>
 
-                    <p class="hero__slogan">Don't let your dreams be just dreams. Experience the world by booking a
+                    <p class="hero-slogan">Don't let your dreams be just dreams. Experience the world by booking a
                         vacation with us now.</p>
 
-                    <!-- button component -->
-                    <a href="#" class="hero__button">Get started</a>
+                    
+                    <a href="index.html" class="hero-button">Get started</a>
                 </section>
                 <!-- insert hero image here as background-image -->
-                <div class="hero__bg-img">
+                <div class="hero-bg-img">
 
                 </div>
 
-            </article>
+            </div>
         </div>
 
-        <!-- recommendations component -->
-        <h3 class="recommendation__heading">Recommendations</h3>
+        <!-- recommendations -->
+        <h3 class="recommendation-heading">Recommendations</h3>
 
-        <section class="card__wrapper">
+        <div class="card-wrapper">
             <!-- hawaii -->
 
-            <section class="card__block">
-                <a href="./pages/hawaii.html" class="card__anchor">
-                    <img src="./assets/images/hawaii.jpg" alt="an image of a beach in Hawaii" class="card--size card">
+            <div class="card--spacing">
+                <a href="./pages/hawaii.html" class="card__link">
+                    <img src="./assets/images/hawaii.jpg" alt="an image of a beach in Hawaii" class="card">
                     <p class="card__text">Hawaii</p>
                 </a>
-            </section>
+            </div>
 
             <!-- iceland -->
-            <section class="card__block">
-                <a href="./pages/iceland.html" class="card__anchor">
+            <div class="card--spacing">
+                <a href="./pages/iceland.html" class="card__link">
                     <img src="./assets/images/iceland.jpg" alt="an image of a river in a forest in Iceland"
-                        class="card--size card">
+                        class="card">
                     <p class="card__text">Iceland</p>
                 </a>
-            </section>
+            </div>
 
             <!-- greece -->
-            <section class="card__block">
-                <a href="./pages/greece.html" class="card__anchor">
+            <div class="card--spacing">
+                <a href="./pages/greece.html" class="card__link">
                     <img src="./assets/images/greece.jpg" alt="an image of a monument in Greece"
-                        class="card--size card">
+                        class="card">
                     <p class="card__text">Greece</p>
                 </a>
-            </section>
+            </div>
 
-        </section>
+        </div>
 
     </main>
 
     <!-- footer component -->
     <footer class="footer">
         <section class="footer__contact-container">
-            <h3 class="footer__title">Contact</h3>
+            <h3 class="footer__heading">Contact</h3>
             <div class="footer__email-container">
                 <p class="footer__subtitle">Email</p>
                 <p class="footer__email">info@travelsite.com</p>
@@ -100,7 +100,7 @@
         </section>
 
         <section class="footer__hours-container">
-            <h3 class="footer__title">Hours</h3>
+            <h3 class="footer__heading">Hours</h3>
             <ul class="footer__hours">
                 <li>
                     <p class="footer__subtitle">Monday - Friday</p>
@@ -119,7 +119,7 @@
         </section>
 
         <section class="footer__social-container">
-            <h3 class="footer__title">Social</h3>
+            <h3 class="footer__heading">Social</h3>
 
             <div class="footer__icons-container">
                 <a href="https://www.instagram.com" rel="external" target="_blank"><img
