--- a/pages/iceland.html
+++ b/pages/iceland.html
@@ -19,32 +19,32 @@
 
     <header>
         <!-- nav component -->
-        <nav class="header__nav">
+        <nav class="main-nav">
             <h2><a href="../index.html" class="nav__logo">Travel Site</a></h2>
             <ul class="nav__menu">
-                <li class="menu__elements"><a href="../index.html" class="menu__elements--a-decoration">Home</a></li>
-                <li class="menu__elements"><a href="hawaii.html" class="menu__elements--a-decoration">Hawaii</a></li>
-                <li class="menu__elements"><a href="iceland.html"
-                        class="menu__elements--a-decoration menu__elements--active">Iceland</a></li>
-                <li class="menu__elements menu__element-last"><a href="greece.html"
-                        class="menu__elements--a-decoration">Greece</a></li>
+                <li class="menu__item"><a href="../index.html" class="menu__item-link">Home</a></li>
+                <li class="menu__item"><a href="hawaii.html" class="menu__item-link">Hawaii</a></li>
+                <li class="menu__item"><a href="iceland.html"
+                        class="menu__item-link menu__item--active">Iceland</a></li>
+                <li class="menu__item menu__last-item"><a href="greece.html"
+                        class="menu__item-link">Greece</a></li>
             </ul>
         </nav>
     </header>
 
     <!-- itinerary component -->
-    <main class="main__content-destinations">
+    <main class="content-push-down">
 
 
-        <section class="destination--bg-iceland">
+        <section class="bg-iceland">
 
             <h1 class="destination__heading">Iceland</h1>
-            <div class="card__wrapper">
-                <section class="card__block card card--size card--itinerary">
+            <div class="card-wrapper">
+                <section class="card--spacing card card--itinerary">
 
                     <h3 class="itinerary__heading">Friday</h3>
 
-                    <ul class="card__itinerary-schedule">
+                    <ul class="card__list">
                         <li>Breakfast</li>
                         <li>Lunch</li>
                         <li>Dinner</li>
@@ -52,10 +52,10 @@
                     </ul>
                 </section>
 
-                <section class="card__block card card--size card--itinerary">
+                <section class="card--spacing card card--itinerary">
                     <h3 class="itinerary__heading">Saturday</h3>
 
-                    <ul class="card__itinerary-schedule">
+                    <ul class="card__list">
                         <li>Breakfast</li>
                         <li>Lunch</li>
                         <li>Dinner</li>
@@ -63,10 +63,10 @@
                     </ul>
                 </section>
 
-                <section class="card__block card card--size card--itinerary">
+                <section class="card--spacing card card--itinerary">
                     <h3 class="itinerary__heading">Sunday</h3>
 
-                    <ul class="card__itinerary-schedule">
+                    <ul class="card__list">
                         <li>Breakfast</li>
                         <li>Lunch</li>
                         <li>Dinner</li>
@@ -81,10 +81,10 @@
 
     <!-- footer component -->
 
-    <footer class="footer footer--position">
+    <footer class="footer footer-position">
         <!-- footer contact -->
         <section class="footer__contact-container">
-            <h3 class="footer__title">Contact</h3>
+            <h3 class="footer__heading">Contact</h3>
             <div class="footer__email-container">
                 <p class="footer__subtitle">Email</p>
                 <p class="footer__email">info@travelsite.com</p>
@@ -93,7 +93,7 @@
 
         <!-- footer hours -->
         <section class="footer__hours-container">
-            <h3 class="footer__title">Hours</h3>
+            <h3 class="footer__heading">Hours</h3>
             <ul class="footer__hours">
                 <li>
                     <p class="footer__subtitle">Monday - Friday</p>
@@ -112,7 +112,7 @@
 
         <!-- footer social -->
         <section class="footer__social-container">
-            <h3 class="footer__title">Social</h3>
+            <h3 class="footer__heading">Social</h3>
 
             <div class="footer__icons-container">
                 <a href="https://www.instagram.com" rel="external" target="_blank"><img
