convert absolute to relative units

--- a/index.html
+++ b/index.html
@@ -19,14 +19,12 @@
             <h2><a href="index.html" class="nav__logo">Travel Site</a></h2>
 
             <ul class="nav__menu">
-                <li class="menu__item"><a href="index.html"
-                        class="menu__item-link menu__item--active">Home</a></li>
+                <li class="menu__item"><a href="index.html" class="menu__item-link menu__item--active">Home</a></li>
                 <li class="menu__item"><a href="./pages/hawaii.html" class="menu__item-link">Hawaii</a>
                 </li>
-                <li class="menu__item"><a href="./pages/iceland.html"
-                        class="menu__item-link">Iceland</a></li>
-                <li class="menu__item menu__last-item"><a href="./pages/greece.html"
-                        class="menu__item-link">Greece</a></li>
+                <li class="menu__item"><a href="./pages/iceland.html" class="menu__item-link">Iceland</a></li>
+                <li class="menu__item menu__last-item"><a href="./pages/greece.html" class="menu__item-link">Greece</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -43,8 +41,8 @@
                     <p class="hero-slogan">Don't let your dreams be just dreams. Experience the world by booking a
                         vacation with us now.</p>
 
-                    
                     <a href="index.html" class="hero-button">Get started</a>
+
                 </section>
                 <!-- insert hero image here as background-image -->
                 <div class="hero-bg-img">
@@ -79,8 +77,7 @@
             <!-- greece -->
             <div class="card--spacing">
                 <a href="./pages/greece.html" class="card__link">
-                    <img src="./assets/images/greece.jpg" alt="an image of a monument in Greece"
-                        class="card">
+                    <img src="./assets/images/greece.jpg" alt="an image of a monument in Greece" class="card">
                     <p class="card__text">Greece</p>
                 </a>
             </div>
@@ -123,11 +120,12 @@
 
             <div class="footer__icons-container">
                 <a href="https://www.instagram.com" rel="external" target="_blank"><img
-                        src="./assets/images/icon-instagram.png" class="footer__icon-instagram"></a>
+                        src="./assets/images/icon-instagram.png" alt="instagram icon"
+                        class="footer__icon-instagram"></a>
                 <a href="https://www.facebook.com" rel="external" target="_blank"><img
-                        src="./assets/images/icon-facebook.png" class="footer__icon-fb"></a>
+                        src="./assets/images/icon-facebook.png" alt="facebook icon" class="footer__icon-fb"></a>
                 <a href="https://www.twitter.com" rel="external" target="_blank"><img
-                        src="./assets/images/icon-twitter.png" class="footer__icon-twitter"></a>
+                        src="./assets/images/icon-twitter.png" alt="twitter icon" class="footer__icon-twitter"></a>
             </div>
         </section>
 
