--- a/pages/greece.html
+++ b/pages/greece.html
@@ -30,7 +30,7 @@
 
     <main class="content-push-down">
 
-        <section class="bg-greece">
+        <section class="bg-img-container bg-greece">
 
             <h1 class="destination__heading">Greece</h1>
             <div class="card-wrapper">
@@ -106,11 +106,12 @@
 
             <div class="footer__icons-container">
                 <a href="https://www.instagram.com" rel="external" target="_blank"><img
-                        src="../assets/images/icon-instagram.png" class="footer__icon-instagram"></a>
+                        src="../assets/images/icon-instagram.png" alt="instagram icon"
+                        class="footer__icon-instagram"></a>
                 <a href="https://www.facebook.com" rel="external" target="_blank"><img
-                        src="../assets/images/icon-facebook.png" class="footer__icon-fb"></a>
+                        src="../assets/images/icon-facebook.png" alt="facebook icon" class="footer__icon-fb"></a>
                 <a href="https://www.twitter.com" rel="external" target="_blank"><img
-                        src="../assets/images/icon-twitter.png" class="footer__icon-twitter"></a>
+                        src="../assets/images/icon-twitter.png" alt="twitter icon" class="footer__icon-twitter"></a>
             </div>
         </section>
 
