--- a/pages/hawaii.html
+++ b/pages/hawaii.html
@@ -20,11 +20,9 @@
             <h2><a href="../index.html" class="nav__logo">Travel Site</a></h2>
             <ul class="nav__menu">
                 <li class="menu__item"><a href="../index.html" class="menu__item-link">Home</a></li>
-                <li class="menu__item"><a href="hawaii.html"
-                        class="menu__item-link menu__item--active">Hawaii</a></li>
+                <li class="menu__item"><a href="hawaii.html" class="menu__item-link menu__item--active">Hawaii</a></li>
                 <li class="menu__item"><a href="iceland.html" class="menu__item-link">Iceland</a></li>
-                <li class="menu__item menu__last-item"><a href="greece.html"
-                        class="menu__item-link ">Greece</a></li>
+                <li class="menu__item menu__last-item"><a href="greece.html" class="menu__item-link ">Greece</a></li>
             </ul>
         </nav>
     </header>
@@ -32,7 +30,7 @@
     <!-- itinerary component -->
     <main class="content-push-down">
 
-        <section class="bg-hawaii">
+        <section class="bg-img-container bg-hawaii">
 
             <h1 class="destination__heading">Hawaii</h1>
             <div class="card-wrapper">
@@ -108,11 +106,12 @@
 
             <div class="footer__icons-container">
                 <a href="https://www.instagram.com" rel="external" target="_blank"><img
-                        src="../assets/images/icon-instagram.png" class="footer__icon-instagram"></a>
+                        src="../assets/images/icon-instagram.png" alt="instagram icon"
+                        class="footer__icon-instagram"></a>
                 <a href="https://www.facebook.com" rel="external" target="_blank"><img
-                        src="../assets/images/icon-facebook.png" class="footer__icon-fb"></a>
+                        src="../assets/images/icon-facebook.png" alt="facebook icon" class="footer__icon-fb"></a>
                 <a href="https://www.twitter.com" rel="external" target="_blank"><img
-                        src="../assets/images/icon-twitter.png" class="footer__icon-twitter"></a>
+                        src="../assets/images/icon-twitter.png" alt="twitter icon" class="footer__icon-twitter"></a>
             </div>
         </section>
 
