--- a/pages/iceland.html
+++ b/pages/iceland.html
@@ -16,7 +16,6 @@
 
     <!-- nav component -->
 
-
     <header>
         <!-- nav component -->
         <nav class="main-nav">
@@ -24,10 +23,9 @@
             <ul class="nav__menu">
                 <li class="menu__item"><a href="../index.html" class="menu__item-link">Home</a></li>
                 <li class="menu__item"><a href="hawaii.html" class="menu__item-link">Hawaii</a></li>
-                <li class="menu__item"><a href="iceland.html"
-                        class="menu__item-link menu__item--active">Iceland</a></li>
-                <li class="menu__item menu__last-item"><a href="greece.html"
-                        class="menu__item-link">Greece</a></li>
+                <li class="menu__item"><a href="iceland.html" class="menu__item-link menu__item--active">Iceland</a>
+                </li>
+                <li class="menu__item menu__last-item"><a href="greece.html" class="menu__item-link">Greece</a></li>
             </ul>
         </nav>
     </header>
@@ -36,7 +34,7 @@
     <main class="content-push-down">
 
 
-        <section class="bg-iceland">
+        <section class="bg-img-container bg-iceland">
 
             <h1 class="destination__heading">Iceland</h1>
             <div class="card-wrapper">
@@ -116,11 +114,12 @@
 
             <div class="footer__icons-container">
                 <a href="https://www.instagram.com" rel="external" target="_blank"><img
-                        src="../assets/images/icon-instagram.png" class="footer__icon-instagram"></a>
+                        src="../assets/images/icon-instagram.png" alt="instagram icon"
+                        class="footer__icon-instagram"></a>
                 <a href="https://www.facebook.com" rel="external" target="_blank"><img
-                        src="../assets/images/icon-facebook.png" class="footer__icon-fb"></a>
+                        src="../assets/images/icon-facebook.png" alt="facebook icon" class="footer__icon-fb"></a>
                 <a href="https://www.twitter.com" rel="external" target="_blank"><img
-                        src="../assets/images/icon-twitter.png" class="footer__icon-twitter"></a>
+                        src="../assets/images/icon-twitter.png" alt="twitter icon" class="footer__icon-twitter"></a>
             </div>
         </section>
 
